# gator-tune-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: consts.py  main.py
src/responses/: base.py
src/schemas/: response.py
src/tests/: test_local.py  test_main.py  test_main_v1_deprecated.py
src/type/: cache.py  ytdl.py
src/utils/: consts.py  methods.py  strings.py
src/v1/: router.py  service.py
src/v1/schemas/: response.py
src/v2/: router.py  service.py
