[project]
name = "gator-tune-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.125.0",
    "html5lib>=1.1",
    "poethepoet>=0.38.0",
    "python-dotenv>=1.2.1",
    "pytubefix>=10.3.6",
    "requests>=2.32.5",
    "typer>=0.20.1",
]

[tool.poe.tasks]
dev="uv run fastapi dev ./src/main.py"
