[project]
name = "gator-tune-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bgutil-ytdlp-pot-provider>=1.3.1",
    "fastapi[standard]>=0.125.0",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "poethepoet>=0.38.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pytubefix==10.3.8",
    "requests>=2.32.5",
    "typer>=0.20.1",
    "yt-dlp>=2026.3.13",
]

[tool.poe.tasks]
dev="uv run fastapi dev ./src/main.py --proxy-headers --forwarded-allow-ips '*' --host 0.0.0.0"
prod="uv run fastapi run ./src/main.py --proxy-headers --forwarded-allow-ips '*' --host 0.0.0.0"
test="uv run pytest --ignore-glob=**/*deprecated.py src/tests"
